Reorder iRAT E1 answers

--- a/modules/1-E/readiness.tex
+++ b/modules/1-E/readiness.tex
@@ -15,9 +15,20 @@
 \end{readinessAssuranceResources}
 
 
-
+%Form B005 Answer key, problems 1-10
+%1  C
+%2  A
+%3  D
+%4  D
+%5  B
+%6  A
+%7  A
+%8  C
+%9  D
+%10 B
 
 \begin{readinessAssuranceTest}
+%1  C
 \item Which of these graphs represents the following system of linear equations?
       \begin{align*}
       x+2y   &=   4 \\
@@ -26,13 +37,31 @@
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \systemWithOneSolutionA % correct
-\item \systemWithOneSolutionB
 \item \systemWithInfinitelyManySolutions
 \item \systemWithNoSolutions
+\item \systemWithOneSolutionA % correct
+\item \systemWithOneSolutionB
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+
+%2  A
+\item How many solutions are there for the system of linear equations
+      represented by the following graph?
+    \begin{center}
+      \systemWithOneSolutionB
+    \end{center}
+
+\begin{multicols}{4}
+\begin{readinessAssuranceTestChoices}
+\item One % correct
+\item Two
+\item Zero
+\item Infinitely-many
+\end{readinessAssuranceTestChoices}
+\end{multicols}
+
+%3  D
 \item Which of these graphs represents the following system of linear equations?
       \begin{align*}
       3x+3y   &=   6 \\
@@ -43,28 +72,14 @@
 \begin{readinessAssuranceTestChoices}
 \item \systemWithOneSolutionA
 \item \systemWithOneSolutionB
-\item \systemWithInfinitelyManySolutions % correct
 \item \systemWithNoSolutions
+\item \systemWithInfinitelyManySolutions % correct
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
 
-\item How many solutions are there for the system of linear equations
-      represented by the following graph?
-    \begin{center}
-      \systemWithOneSolutionB
-    \end{center}
 
-\begin{multicols}{4}
-\begin{readinessAssuranceTestChoices}
-\item Zero
-\item One % correct
-\item Two
-\item Infinitely-many
-\end{readinessAssuranceTestChoices}
-\end{multicols}
-
-
+%4  D
 \item How many solutions are there for the system of linear equations
       represented by the following graph? (This graph represents two completely
       overlapping lines.)
@@ -82,6 +97,7 @@
 \end{multicols}
 
 
+%5  B
 \item How many solutions are there for the system of linear equations
       represented by the following graph?
     \begin{center}
@@ -98,6 +114,7 @@
 \end{multicols}
 
 
+%6  A
 \item How many solutions are there for the system of linear equations
       represented by the following graph? (This graph represents two
       non-overlapping parallel lines.)
@@ -114,6 +131,8 @@
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+
+%7  A
 \item Solve the following system of linear equations.
       \begin{align*}
       y   &=   2x+5 \\
@@ -129,6 +148,8 @@
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+
+%8  C
 \item Solve the following system of linear equations.
       \begin{align*}
       y   &=  3x+5 \\
@@ -146,6 +167,8 @@
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+
+%9  D
 \item Solve the following system of linear equations.
       \begin{align*}
       x+2y   &=   4 \\
@@ -154,15 +177,17 @@
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
+\item There are no solutions.
+\item There are infinitely-many solutions.
 \item
 \((x,y)=(-1,4)\)
 \item
 \((x,y)=(2,1)\) % correct
-\item There are no solutions.
-\item There are infinitely-many solutions.
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+
+%10 B
 \item Solve the following system of linear equations.
       \begin{align*}
       4x-8y   &= 12 \\
@@ -171,12 +196,12 @@
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
+\item There are no solutions.
+\item There are infinitely-many solutions. % correct
 \item
 \((x,y)=(3,3)\)
 \item
 \((x,y)=(-2,1)\)
-\item There are no solutions.
-\item There are infinitely-many solutions. % correct
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
