--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -4,6 +4,11 @@
 
 \newcommand{\vect}{\mathbf}
 
+\newcommand{\circledNumber}[1]{ % https://tex.stackexchange.com/a/7045
+\tikz[baseline=(char.base)]{
+            \node[shape=circle,draw,inner sep=2pt] (char) {#1};}
+}
+
 
 
 %%%New Commands/Math operators%%%
