--- a/modules/1-E/day2.tex
+++ b/modules/1-E/day2.tex
@@ -15,8 +15,8 @@
   these operations), we write \(A\sim B\).
 \end{definition}
 
-\begin{activity}{15} % TODO add subactivity for finding solution
-  Show that the following two linear systems:
+\begin{activity}{10}
+  Consider the following two linear systems.
   \begin{multicols}{2}\noindent
     \begin{alignat*}{4}
       3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
@@ -29,19 +29,24 @@
            &\, \,&      &\, \,&   x_3 &\,=\,& 2
     \end{alignat*}
   \end{multicols}
-  are equivalent by converting the first system to an augmented matrix,
-  and then performing the following row operations to obtain
-  an augmented matrix equivalent to the second system.
-  \begin{multicols}{2}\noindent
-  \begin{enumerate}
-    \item Swap \(R_1\) (first row) and \(R_2\) (second row).
-    \item Multiply \(R_2\) by \(\frac{1}{2}\).
-    \item Add \(R_1\) to \(R_3\).
-    \item Add \(-3R_1\) to \(R_2\).
-    \item Add \(-2R_2\) to \(R_3\).
-    \item Multiply \(R_3\) by \(\frac{1}{3}\).
-  \end{enumerate}
-  \end{multicols}
+  \begin{subactivity}
+    Show these are equivalent by converting the first system to an augmented
+    matrix, and then performing the following row operations to obtain
+    an augmented matrix equivalent to the second system.
+    \begin{multicols}{2}\noindent
+    \begin{enumerate}
+      \item Swap \(R_1\) (first row) and \(R_2\) (second row).
+      \item Multiply \(R_2\) by \(\frac{1}{2}\).
+      \item Add \(R_1\) to \(R_3\).
+      \item Add \(-3R_1\) to \(R_2\).
+      \item Add \(-2R_2\) to \(R_3\).
+      \item Multiply \(R_3\) by \(\frac{1}{3}\).
+    \end{enumerate}
+    \end{multicols}
+  \end{subactivity}
+  \begin{subactivity}
+    What is the common solution to these linear systems?
+  \end{subactivity}
 \end{activity}
 
 \begin{definition}
@@ -49,55 +54,112 @@
   A matrix is in \term{row echelon form} if all leading terms are \(1\),
   the leading term of every row
   is farther right than every leading term on a higher row, and all zero
-  rows are at the bottom of the matrix.
+  rows are at the bottom of the matrix. Examples:
+  \begin{multicols}{3}\noindent
+    \[
+      \begin{bmatrix}[ccc|c]
+        1 & -1 &  5 & 1 \\
+        0 &  1 & -2 & 3 \\
+        0 &  0 &  1 & 2
+      \end{bmatrix}
+    \]
+    \[
+      \begin{bmatrix}[ccc|c]
+        1 & -1 &  5 & 1 \\
+        0 &  0 &  1 & 3 \\
+        0 &  0 &  0 & 1
+      \end{bmatrix}
+    \]
+    \[
+      \begin{bmatrix}[ccc|c]
+        1 & -1 &  5 & 1 \\
+        0 &  0 &  1 & 3 \\
+        0 &  0 &  0 & 0
+      \end{bmatrix}
+    \]
+  \end{multicols}
 \end{definition}
 
 \begin{activity}{10}
-  % TODO rewrite column-by-column
-  Reproduce the steps that manipulated the matrix
+  Find your own sequence of row operations to manipulate the matrix
   \[
     \begin{bmatrix}[ccc|c]
       3 & -2 & 13 & 6 \\
       2 & -2 & 10 & 2 \\
       -1 & 3 & -6 & 11
-    \end{bmatrix}\sim
-    \begin{bmatrix}[ccc|c]
-      1 & -1 &  5 & 1 \\
-      0 &  1 & -2 & 3 \\
-      0 &  0 &  1 & 2
     \end{bmatrix}
   \]
-  into row echelon form by using the following algorithm.
-  % TODO rewrite algorithm
-  \begin{multicols}{2}\noindent
+  into row echelon form. (Note that row echelon form is not unique.)
+
+  The most efficient way to do this is by circling \term{pivot positions}
+  in your matrix:
   \begin{enumerate}
-    \item Identify
-    the top cell of the first non-zero column as your \textbf{pivot position};
-    you will ignore anything in the matrix that is above or left of your
-    current pivot position.
-    \item If the pivot position contains a \(0\), swap its row with a lower
-          row that does not contain a \(0\) in its column.
-    \item Divide the pivot row by the term in pivot position to change the
-          pivot term to \(1\). (If convenient, you can first swap the
-          pivot row with a lower row to make this division easier.)
-    \item Add multiples of the pivot row to all lower rows so that all terms
-          below pivot position become \(0\).
-    \item Move your pivot position down and right one step.
-    \item If all terms in and below pivot position are zero, move your
-          pivot position right. Repeat this step as needed.
-    \item If the matrix is not yet in row echelon form, return to Step 2.
+    \item Circle the top-left-most cell that (a) is below any existing pivot
+    positions and (b) has a nonzero term either in that position or below it.
+    \item Ignoring any rows above this pivot position, use row operations
+    to change the value of your pivot position to \(1\), and the terms below
+    it to \(0\).
+    \item Repeat these two steps as often as possible.
   \end{enumerate}
-  \end{multicols}
 \end{activity}
 
-\begin{definition}%TODO move after next activity
+\begin{activity}{10}
+  Solve this simplifed linear system:
+    \begin{alignat*}{4}
+       x_1 &\,-\,&  x_2  &\,+\,&  5x_3 &\,=\,& 1 \\
+           &\, \,&  x_2 &\,-\,&  2x_3 &\,=\,& 3 \\
+           &\, \,&      &\, \,&   x_3 &\,=\,& 2
+    \end{alignat*}
+\end{activity}
+
+\begin{observation}
+  The consise standard form of the solution to this linear system
+  corresponds to a simplified row echelon form matrix:
+  \begin{multicols}{2}\noindent
+    \begin{alignat*}{4}
+       x_1 &\, \,&      &\, \,&       &\,=\,& -2 \\
+           &\, \,&  x_2 &\, \,&       &\,=\,& 7 \\
+           &\, \,&      &\, \,&   x_3 &\,=\,& 2
+    \end{alignat*}
+    \[
+      \begin{bmatrix}[ccc|c]
+        1 & 0 & 0 & -2 \\
+        0 & 1 & 0 & 7 \\
+        0 & 0 & 1 & 2
+      \end{bmatrix}
+    \]
+  \end{multicols}
+\end{observation}
+
+\begin{definition}
   A matrix is in \term{reduced row echelon form} if it is in row echelon form
-  and all terms above leading terms are \(0\). %TODO change leading terms
-  % to pivot positions
+  and all terms above leading terms are \(0\). Examples:
+  \begin{multicols}{3}\noindent
+    \[
+      \begin{bmatrix}[ccc|c]
+        1 & 0 & 0 & -2 \\
+        0 & 1 & 0 & 7 \\
+        0 & 0 & 1 & 2
+      \end{bmatrix}
+    \]
+    \[
+      \begin{bmatrix}[ccc|c]
+        1 & 0 & -2 & 0 \\
+        0 & 1 & 3 & 0 \\
+        0 & 0 & 0 & 1
+      \end{bmatrix}
+    \]
+    \[
+      \begin{bmatrix}[ccc|c]
+        1 & 3 & 0 & -2 \\
+        0 & 0 & 1 & 7 \\
+        0 & 0 & 0 & 0
+      \end{bmatrix}
+    \]
+  \end{multicols}
 \end{definition}
 
 \begin{activity}{10}
-  % TODO remove explicit steps
   Show that the following two linear systems:
   \begin{multicols}{2}\noindent
     \begin{alignat*}{4}
@@ -112,18 +174,12 @@
       \end{alignat*}
   \end{multicols}
   are equivalent by converting the first system to an augmented matrix,
-  and then performing the following row operations to obtain
-  an augmented matrix equivalent to the second system.
-  \begin{enumerate}
-    \item Add \(2R_3\) to \(R_2\).
-    \item Add \(-5R_3\) to \(R_1\).
-    \item Add \(R_2\) to \(R_1\).
-  \end{enumerate}
-  Then write the solution to the linear system.
+  and then zeroing out all terms above pivot positions (the leading terms).
 \end{activity}
 
 \begin{remark}
-  We may verify that \((x_1,x_2,x_3)=(-2,7,2)\) is a solution to the
+  We may verify that \(\begin{bmatrix}x_1\\x_2\\x_3\end{bmatrix}=
+  \begin{bmatrix}-2\\7\\2\end{bmatrix}\) is a solution to the
   original linear system
     \begin{alignat*}{4}
       3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
@@ -133,25 +189,26 @@
   by plugging the solution into each equation.
 \end{remark}
 
-%TODO 3x3 example that is consistent with inf solutions
+\begin{fact}
+  Every augmented matrix \(A\) reduces to a unique reduced row echelon form
+  matrix. This matrix is denoted as \(\RREF(A)\).
+\end{fact}
 
-% \begin{activity}{10}
-%   Reproduce the steps that manipulated the matrix
-%   \[
-%     \begin{bmatrix}[ccc|c]
-%       1 & -1 &  5 & 1 \\
-%       0 &  1 & -2 & 3 \\
-%       0 &  0 &  1 & 2
-%     \end{bmatrix}\sim
-%     \begin{bmatrix}[ccc|c]
-%       1 &  0 &  0 & -2 \\
-%       0 &  1 &  0 & 7 \\
-%       0 &  0 &  1 & 2
-%     \end{bmatrix}
-%   \]
-%   into reduced row echelon form by adding multiples of lower rows into
-%   higher rows, zeroing out all terms above leading terms.
-% \end{activity}
+\begin{activity}{10}
+  Consider the matrix \[
+  A = \begin{bmatrix}[ccc|c]
+    1 & 2 & 3 & 1\\
+    2 & 4 & 8 & 0
+  \end{bmatrix}
+  \].
+  \begin{subactivity}
+    Find \(\RREF(A)\).
+  \end{subactivity}
+  \begin{subactivity}
+    How many solutions does the corresponding linear system have?
+  \end{subactivity}
+\end{activity}
+
 
 
 
