--- a/modules/1-E/day3.tex
+++ b/modules/1-E/day3.tex
@@ -18,6 +18,10 @@
       zero out any terms above pivot positions.
     \end{enumerate}
   \end{multicols}
+\end{definition}
+
+\begin{observation}
+  Here is an example of applying Gauss-Jordan elimination to a matrix:
   \[
     \begin{bmatrix}[ccc|c]
       \circledNumber{3} & -2 & 13 & 6 \\
@@ -33,27 +37,47 @@
      \circledNumber{1} & -1 & 5 & 1 \\
       3 & -2 & 13 & 6 \\
       -1 & 3 & -6 & 11
-    \end{bmatrix}\sim
+    \end{bmatrix}
+  \]
+  \[\sim
     \begin{bmatrix}[ccc|c]
      \circledNumber{1} & -1 & 5 & 1 \\
       0 & \circledNumber{1} & -2 & 3 \\
       0 & 2 & -1 & 12
     \end{bmatrix}
-  \]
-  \[
-    \sim\dots\sim
+    \sim
+      \begin{bmatrix}[ccc|c]
+       \circledNumber{1} & -1 & 5 & 1 \\
+        0 & \circledNumber{1} & -2 & 3 \\
+        0 & 0 & \circledNumber{3} & 6
+      \end{bmatrix}
+    \sim
     \begin{bmatrix}[ccc|c]
      \circledNumber{1} & -1 & 5 & 1 \\
       0 & \circledNumber{1} & -2 & 3 \\
       0 & 0 & \circledNumber{1} & 2
-    \end{bmatrix}\sim\dots\sim
+    \end{bmatrix}
+  \]
+  \[\sim
+    \begin{bmatrix}[ccc|c]
+     \circledNumber{1} & -1 & 5 & 1 \\
+      0 & \circledNumber{1} & -2 & 3 \\
+      0 & 0 & \circledNumber{1} & 2
+    \end{bmatrix}
+    \sim
+    \begin{bmatrix}[ccc|c]
+     \circledNumber{1} & -1 & 0 & -9 \\
+      0 & \circledNumber{1} & 0 & 7 \\
+      0 & 0 & \circledNumber{1} & 2
+    \end{bmatrix}
+    \sim
     \begin{bmatrix}[ccc|c]
      \circledNumber{1} & 0 & 0 & -2 \\
       0 & \circledNumber{1} & 0 & 7 \\
       0 & 0 & \circledNumber{1} & 2
     \end{bmatrix}
   \]
-\end{definition}
+\end{observation}
 
 \begin{activity}{15}
   Find \(\RREF(A)\) where
@@ -77,7 +101,7 @@
 \end{definition}
 
 \begin{activity}{10}
-  Given the linear system and its equivalent augmented matrices
+  Given the linear system and its equivalent row-reduced matrix
   \begin{multicols}{2}\noindent
     \begin{alignat*}{5}
       -x_1 &\,+\,&  x_2 &\,-\,&  3x_3 &\,+\,&  2x_4 &\,=\,& 0 \\
@@ -86,12 +110,6 @@
            &\, \,&  x_2 &\,-\,&   x_3 &\,+\,&   x_4 &\,=\,& 1 \\
     \end{alignat*}
   \[
-    \begin{bmatrix}[cccc|c]
-      -1 &  1 & -3 &  2 &  0 \\
-       2 & -1 &  5 &  3 & -11 \\
-       3 &  2 &  4 &  1 &  1 \\
-       0 &  1 & -1 &  1 &  1 \\
-    \end{bmatrix}\sim
     \begin{bmatrix}[cccc|c]
        1 &  0 &  2 &  0 & -1 \\
        0 &  1 & -1 &  0 &  3 \\
