--- a/modules/1-E/day1.tex
+++ b/modules/1-E/day1.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{Day 1}
+\begin{applicationActivities}{1}{4}
 
 \begin{definition}
 A \term{linear equation} is an equation of the variables \(x_i\) of the form
