--- a/modules/1-E/day2.tex
+++ b/modules/1-E/day2.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{Day 2}
+\begin{applicationActivities}{2}{5}
 
 \begin{definition}
   The following \term{row operations} produce equivalent
