--- a/modules/2-V/day1.tex
+++ b/modules/2-V/day1.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{Day 1}
+\begin{applicationActivities}{1}{8}
 
 % have students capture 8 properties of R2 from list of 11
 % include ca=b, unique equidistant, nonzero orthogonal
