--- a/modules/2-V/day2.tex
+++ b/modules/2-V/day2.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{Day 2}
+\begin{applicationActivities}{2}{9}
 
 \begin{remark}
   The following sets are examples of vector spaces, with the usual/natural
