--- a/modules/2-V/day3.tex
+++ b/modules/2-V/day3.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{Day 3}
+\begin{applicationActivities}{3}{10}
 
 \begin{fact}
   A vector \(\vect b\) belongs to
