--- a/modules/2-V/day4.tex
+++ b/modules/2-V/day4.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{Day 4}
+\begin{applicationActivities}{4}{11}
 
 \begin{fact}
   At least \(n\) vectors are required to span \(\IR^n\).
