--- a/modules/3-S/day3.tex
+++ b/modules/3-S/day3.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{Day 3}
+\begin{applicationActivities}{3}{15}
 
 \begin{activity}{10}
   (discover that the redundant vectors are non-pivot columns)
