--- a/modules/5-M/day2.tex
+++ b/modules/5-M/day2.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{Day 2}
+\begin{applicationActivities}{2}{23}
 
 \begin{activity}{0}
 Each row operation can be interpreted as a matrix multiplication.  Let $A \in M_{4,4}$
