--- a/modules/6-G/index.tex
+++ b/modules/6-G/index.tex
@@ -15,7 +15,8 @@
 \end{moduleStandards}
 
 \input{modules/6-G/readiness.tex}
-\input{modules/6-G/day1.tex} % includes Day 2
+\input{modules/6-G/day1.tex}
+\input{modules/6-G/day2.tex}
 \input{modules/6-G/day3.tex}
 \input{modules/6-G/day4.tex}
 
