--- a/modules/3-S/day1.tex
+++ b/modules/3-S/day1.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{Day 1}
+\begin{applicationActivities}{1}{13}
 
 \begin{activity}{15}
   In the previous module, we considered
