--- a/modules/4-A/day2.tex
+++ b/modules/4-A/day2.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{Day 2}
+\begin{applicationActivities}{2}{19}
 
 \begin{definition}
 Let $T: V \rightarrow W$ be a linear transformation.
