--- a/modules/5-M/day3.tex
+++ b/modules/5-M/day3.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{Day 3}
+\begin{applicationActivities}{3}{24}
 
 \begin{activity}{0}
   Let $T: \IR^n \rightarrow \IR^n$ be a linear map with matrix $A \in M_{n,n}$.
