--- a/modules/6-G/day1.tex
+++ b/modules/6-G/day1.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{Days 1-2}
+\begin{applicationActivities}{1}{26}
 
 \begin{activity}{0}
 Consider the linear transformation $A : \IR^2 \rightarrow \IR^2$ given by the matrix $A = \begin{bmatrix} 2 & 0 \\ 0 & 3 \end{bmatrix}$
@@ -174,58 +174,5 @@ Note that this implies that the determinant is actually a \textit{signed} area (
   Note that we now understand the effect of any column operation on the determinant.
 \end{observation}
 
-\begin{activity}{0}
-  How are $\det(A)$ and $\det(A^T)$ related?
-\begin{enumerate}[(a)]
-\item $\det(A)=\det(A^T)$
-\item $\det(A)=-\det(A^T)$
-\item $\det(A)=\frac{1}{\det(A^T)}$
-\item They are unrelated
-\end{enumerate}
-\end{activity}
-
-\begin{observation}
-  Thus, row operations behave like column operations.  So we can use row reduction to compute determinants.
-\end{observation}
-
-\begin{activity}{0}
-  Compute $\det \begin{bmatrix} 4 & 5 \\ 2 & 3 \end{bmatrix}$.
-\end{activity}
-
-\begin{activity}{0}
-  Compute $\det \begin{bmatrix} a & b \\ c & d \end{bmatrix}$
-\end{activity}
-
-\begin{activity}{0}
-  Which of the following is the same as $\det \begin{bmatrix} 3 & -2 & 0 \\  5 & -1 & 0 \\  -2 & 4 & 1\end{bmatrix}$?
-\begin{enumerate}[(a)]
-\item $\det \begin{bmatrix} 3 & -2 \\ 5 & -1 \end{bmatrix}$
-\item $\det \begin{bmatrix} 3 & -2 \\ -2 & 4 \end{bmatrix}$
-\item $\det \begin{bmatrix} 5 & -1 \\ -2 & 4 \end{bmatrix}$
-\item None of these
-\end{enumerate}
-\end{activity}
-
-\begin{activity}{0}
-  Which of the following is the same as $\det \begin{bmatrix} 3 & 0 & 7 \\  5 & 1 & 2 \\  -2 & 0 & 6 \end{bmatrix}$?
-\begin{enumerate}[(a)]
-\item $\det \begin{bmatrix} 3 & 7 \\ 5 & 2 \end{bmatrix}$
-\item $\det \begin{bmatrix} 3 & 7 \\ -2 & 6 \end{bmatrix}$
-\item $\det \begin{bmatrix} 5 & 2 \\ -2 & 6 \end{bmatrix}$
-\item None of these
-\end{enumerate}
-\end{activity}
-
-\begin{activity}{0}
-  Compute $\det \begin{bmatrix} 0 & 3 & -2 \\ 1 & 5 & 12 \\ 0 & 2 & -1 \end{bmatrix}$
-\end{activity}
-
-\begin{activity}{0}
-   Using the fact that $\begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix} = \begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} + \begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix}$, compute $\det \begin{bmatrix} 1 & 2 & 3 \\ 1 & -2 & 5 \\ 0 & 3 & 3 \end{bmatrix}$.
-\end{activity}
-
-\begin{activity}{0}
-   Compute $\begin{bmatrix} 2 & 3 & 5 & 0 \\ 0 & 1 & -1 & 0 \\ 1 & 2 & 0 & 3 \\ -1 & -1 & 2 & 2 \end{bmatrix}$
-\end{activity}
 
 \end{applicationActivities}
