--- a/modules/6-G/day4.tex
+++ b/modules/6-G/day4.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{Day 4}
+\begin{applicationActivities}{4}{29}
 
 \begin{activity}{0}
   If $A \in M_4$, what is the largest number of eigenvalues $A$ can have?
