--- a/course-slides.tex
+++ b/course-slides.tex
@@ -2,6 +2,8 @@
 
 \usepackage{course-slides}
 
+\date{Fall 2017}
+
 \begin{document}
 
 \begin{frame}
@@ -9,9 +11,12 @@
 \end{frame}
 
 \input{modules/1-E/index.tex} % 3 days
-\input{modules/2-V/index.tex} % 3 days
-\input{modules/3-S/index.tex} % 5 days
-% \input{modules/4-A/index.tex} % 2 days
+\input{modules/2-V/index.tex} % 4 days
+\input{modules/3-S/index.tex} % 3 days
+\begin{module}{A}{TODO}\end{module}
+\begin{module}{M}{TODO}\end{module}
+\begin{module}{G}{TODO}\end{module}
+% \input{modules/4-A/index.tex} % 3 days
 % \input{modules/5-M/index.tex} % 4 days
 % \input{modules/6-G/index.tex} % 4 days
 
