--- a/modules/1-E/day2.tex
+++ b/modules/1-E/day2.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{2}{5}
+\begin{applicationActivities}{2}{4}
 
 \begin{definition}
   The following \term{row operations} produce equivalent
@@ -195,12 +195,13 @@
 \end{fact}
 
 \begin{activity}{10}
-  Consider the matrix \[
-  A = \begin{bmatrix}[ccc|c]
-    1 & 2 & 3 & 1\\
-    2 & 4 & 8 & 0
-  \end{bmatrix}
-  \].
+  Consider the following matrix.
+  \[
+    A = \begin{bmatrix}[ccc|c]
+      1 & 2 & 3 & 1\\
+      2 & 4 & 8 & 0
+    \end{bmatrix}
+  \]
   \begin{subactivity}
     Find \(\RREF(A)\).
   \end{subactivity}
