--- a/modules/1-E/index.tex
+++ b/modules/1-E/index.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{module}{Module E: Solving Systems of Linear Equations}
+\begin{module}{E}{Solving Systems of Linear Equations}
 
 \begin{moduleStandards}
   \item \textbf{E1: Systems as matrices.}
