--- a/modules/2-V/index.tex
+++ b/modules/2-V/index.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{module}{Module V: Vector Spaces}
+\begin{module}{V}{Vector Spaces}
 
 \begin{moduleStandards}
   \item \textbf{V1: Vector Spaces.}
