--- a/modules/3-S/index.tex
+++ b/modules/3-S/index.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{module}{Module S: Structure of vector spaces}
+\begin{module}{S}{Structure of vector spaces}
 
 \begin{moduleStandards}
   \item \textbf{S1. Linear independence}
