--- a/modules/4-A/index.tex
+++ b/modules/4-A/index.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{module}{Module A: Algebraic properties of linear maps}
+\begin{module}{A}{Algebraic properties of linear maps}
 
 \begin{moduleStandards}
   \item \textbf{A1. Linear maps as matrices}
