--- a/modules/5-M/index.tex
+++ b/modules/5-M/index.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{module}{Module M: Understanding Matrices Algebraically}
+\begin{module}{M}{Understanding Matrices Algebraically}
 
 \begin{moduleStandards}
   \item \textbf{M1. Matrix multiplication}
