--- a/modules/6-G/index.tex
+++ b/modules/6-G/index.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{module}{Module G: Geometry of Linear Maps}
+\begin{module}{G}{Geometry of Linear Maps}
 
 \begin{moduleStandards}
   \item \textbf{G1. Determinants}
