--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -28,6 +28,12 @@
 \newtheorem*{remarkRaw}{Remark}
 \newtheorem*{activityRaw}{Activity}
 
+%%%Custom Counters%%%
+\newcommand{\moduleLetter}{X}
+\newcounter{ClassDayCounter}
+\newcounter{ActivityCounter}
+\newcounter{SubactivityCounter}
+
 %This code allows for augmented matrices, e.g. by \begin{bmatrix}{cc|c} ...
 \makeatletter
 \renewcommand*\env@matrix[1][*\c@MaxMatrixCols c]{%
