--- a/modules/1-E/day1.tex
+++ b/modules/1-E/day1.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{1}{4}
+\begin{applicationActivities}{1}{3}
 
 \begin{definition}
 A \term{linear equation} is an equation of the variables \(x_i\) of the form
@@ -299,6 +299,37 @@ in the system).
   Two systems of linear equations (and their corresponding augmented
   matrices) are said to be \term{equivalent} if they have the same
   solution set.
+
+  For example, both of these systems have a single solution:
+  \((x_1,x_2)=(1,1)\).
+
+  \begin{multicols}{2}\noindent
+    \begin{alignat*}{3}
+      3x_1 &\,-\,& 2x_2 &\,=\,& 1 \\
+      x_1 &\,+\,& 4x_2 &\,=\,& 5 \\
+    \end{alignat*}
+    \begin{alignat*}{3}
+      3x_1 &\,-\,& 2x_2 &\,=\,& 1 \\
+      4x_1 &\,+\,& 2x_2 &\,=\,& 6 \\
+    \end{alignat*}
+  \end{multicols}
+
+  Therefore these augmented matrices are equivalent:
+
+  \begin{multicols}{2}\noindent
+    \[
+      \begin{bmatrix}[cc|c]
+        3 & -2 & 1\\
+        1 &  4 & 5\\
+      \end{bmatrix}
+    \]
+    \[
+      \begin{bmatrix}[cc|c]
+        3 & -2 & 1\\
+        4 &  2 & 6\\
+      \end{bmatrix}
+    \]
+  \end{multicols}
 \end{definition}
 
 \begin{activity}{10}
