definition files for module E - closes #24

--- a/course-definitions.sty
+++ b/course-definitions.sty
@@ -23,8 +23,9 @@
 
 \NewEnviron{module}[2]{
   \renewcommand{\moduleLetter}{#1}
-  \setHeader{Module \moduleLetter{} Definitions}
+  \setHeader{Module \moduleLetter{} - Definitions}
   \BODY
+  \newpage
 }
 
 
