--- a/day1-slides-lewis-lecture.tex
+++ b/day1-slides-lewis-lecture.tex
@@ -6,4 +6,4 @@
   % \boolfalse{TR}\booltrue{TBL}  %Steven's MW TBL
   % \boolfalse{TR}\boolfalse{TBL} %Steven's MW lecture
 
-\input{day1-slides-base}
+\input{includes/day1-slides-base}
