--- a/homework-report-lewis.tex
+++ b/homework-report-lewis.tex
@@ -6,4 +6,4 @@
   % \boolfalse{TR}\booltrue{TBL}  %Steven's MW TBL
   % \boolfalse{TR}\boolfalse{TBL} %Steven's MW lecture
 
-\input{homework-report-base}
+\input{includes/homework-report-base}
