Notes build with module G #26

--- a/course-notes.tex
+++ b/course-notes.tex
@@ -11,7 +11,7 @@
 \input{modules/3-S/index.tex} % 3 days
 \input{modules/4-A/index.tex} % 3 days
 \input{modules/5-M/index.tex} % 4 days
-% \input{modules/6-G/index.tex} % 4 days
+ \input{modules/6-G/index.tex} % 4 days
 
 %Produces PDFs of readiness materials
 %\immediate\write18{readiness.bash}
