--- a/modules/6-G/day1.tex
+++ b/modules/6-G/day1.tex
@@ -146,7 +146,7 @@ Note that if $\vec{v},\vec{w} \in \IR^2$ and $A=\begin{bmatrix} \vec{v} & \vec{w
 \end{observation}
 
 \begin{activity}{0}
-\item How are $\det (\vec{v},\vec{w})$ and $\det(\vec{w},\vec{v})$ related?
+How are $\det (\vec{v},\vec{w})$ and $\det(\vec{w},\vec{v})$ related?
 \begin{enumerate}[(a)]
 \item $\det(\vec{v},\vec{w}) = \det(\vec{w},\vec{v})$
 \item $\det(\vec{v},\vec{w}) = -\det(\vec{w},\vec{v})$
@@ -161,7 +161,7 @@ Note that this implies that the determinant is actually a \textit{signed} area (
 \end{observation}
 
 \begin{activity}{0}
-\item How are $\det (\vec{v}+\vec{w},\vec{w})$ and $\det(\vec{v},\vec{w})$ related?
+How are $\det (\vec{v}+\vec{w},\vec{w})$ and $\det(\vec{v},\vec{w})$ related?
 \begin{enumerate}[(a)]
 \item $\det(\vec{v}+\vec{w},\vec{w}) = \det(\vec{v},\vec{w})$
 \item $\det(\vec{v}+\vec{w},\vec{w}) = -\det(\vec{v},\vec{w})$
