handouts and full notes by class day in Module E per #28

--- a/course-notes-1-E-part2-handout.tex
+++ b/course-notes-1-E-part2-handout.tex
@@ -1,11 +1,12 @@
 \documentclass{article}[12pt]
 
-\usepackage{course-definitions}
+\usepackage{course-notes}
+\usepackage{course-notes-handout}
 
 
 \RenewEnviron{module}[2]{
   \renewcommand{\moduleLetter}{#1}
-  \setHeader{Module \moduleLetter{} Part 2 - Definitions}
+  \setHeader{Module \moduleLetter{} Part 2 - Handout}
   \BODY
   \newpage
 }
