--- a/course-notes-handout.sty
+++ b/course-notes-handout.sty
@@ -1,27 +1,8 @@
-\usepackage{tbil-la}
-
-\usepackage[left=1in,right=1in,top=1.1in,bottom=1.1in,includeheadfoot]{geometry}
-\usepackage{fancyhdr}
-
-%%%Page layout setup%%%
-\newcommand{\header}{Unknown Header}
-\newcommand{\setHeader}[1]{\renewcommand{\header}{#1}}
-
-\pagestyle{fancy}
-\fancyhf{}
-\chead{\header}
-\rfoot{Page \thepage}
-\renewcommand{\headrulewidth}{1pt}
-\renewcommand{\footrulewidth}{1pt}
-
-\setlength{\parindent}{0pt}
-
-
-\NewEnviron{readinessAssuranceOutcomes}{}
+\RenewEnviron{readinessAssuranceOutcomes}{}
 
 
 
-\NewEnviron{module}[2]{
+\RenewEnviron{module}[2]{
   \renewcommand{\moduleLetter}{#1}
   \setHeader{Module \moduleLetter{} - Definitions}
   \BODY
@@ -29,20 +10,18 @@
 }
 
 
-\NewEnviron{moduleStandards}{}
+\RenewEnviron{moduleStandards}{}
 
-\newcommand{\standardList}[1]{\textbf{(Standard(s) #1)}}
-
-\NewEnviron{readinessAssuranceResources}{}
+\RenewEnviron{readinessAssuranceResources}{}
 
 
-\NewEnviron{readinessAssuranceTest}{}
+\RenewEnviron{readinessAssuranceTest}{}
 
 
-\NewEnviron{readinessAssuranceTestChoices}{}
+\RenewEnviron{readinessAssuranceTestChoices}{}
 
 
-\NewEnviron{applicationActivities}[2]{
+\RenewEnviron{applicationActivities}[2]{
   % \newpage
   \setcounter{ClassDayCounter}{#2}
   \setcounter{ActivityCounter}{0}
@@ -51,7 +30,7 @@
   \BODY
 }
 
-\NewEnviron{activity}[1]{
+\RenewEnviron{activity}[1]{
   \stepcounter{ActivityCounter}
   \setcounter{SubactivityCounter}{0}
 %   \textbf{Activity \theClassDayCounter.\theActivityCounter} \textit{(#1 min)}
@@ -61,7 +40,7 @@
 %   \end{center}
 }
 
-\NewEnviron{remark}{
+\RenewEnviron{remark}{
   \stepcounter{ActivityCounter}
   \setcounter{SubactivityCounter}{0}
   % \textbf{Remark \theClassDayCounter.\theActivityCounter}
@@ -70,7 +49,7 @@
   % \vspace{1em}
 }
 
-\NewEnviron{fact}{
+\RenewEnviron{fact}{
   \stepcounter{ActivityCounter}
   \setcounter{SubactivityCounter}{0}
   % \textbf{Fact \theClassDayCounter.\theActivityCounter}
@@ -79,7 +58,7 @@
   % \vspace{1em}
 }
 
-\NewEnviron{observation}{
+\RenewEnviron{observation}{
   \stepcounter{ActivityCounter}
   \setcounter{SubactivityCounter}{0}
   % \textbf{Observation \theClassDayCounter.\theActivityCounter}
@@ -88,7 +67,7 @@
   % \vspace{1em}
 }
 
-\NewEnviron{example}{
+\RenewEnviron{example}{
   \stepcounter{ActivityCounter}
   \setcounter{SubactivityCounter}{0}
   % \textbf{Example \theClassDayCounter.\theActivityCounter}
@@ -97,17 +76,8 @@
   % \vspace{1em}
 }
 
-\NewEnviron{definition}{
-  \stepcounter{ActivityCounter}
-  \setcounter{SubactivityCounter}{0}
-  \textbf{Definition \theClassDayCounter.\theActivityCounter}
-  \BODY
 
-  \vspace{1em}
-}
-
-
-\NewEnviron{subactivity}{
+\RenewEnviron{subactivity}{
   \stepcounter{SubactivityCounter}
 
   % \textit{Part \theSubactivityCounter:}
@@ -115,4 +85,4 @@
 }
 
 %This is for making instructor notes about running the activity (e.g. card sort, gallery walk...)
-\NewEnviron{TBLnote}{}
+\RenewEnviron{TBLnote}{}
